# cryptodata

./: .env  .env.example  .gitignore  DEV_NOTES.md  README.md  SYSTEM_DESIGN.MD  airflow-requirements.txt  airflow.Dockerfile  crypto-report.md  docker-compose.yaml  makefile  pyproject.toml  run  run.sh
.github/workflows/: main.yml
airflow/: airflow.dockerfile
ansible/: ansible.cfg
ansible/inventory/: hosts.yaml
ansible/playbooks/: bootstrap_python.yaml
archives/cryptofeed/: scrapy.cfg
archives/scrapping-cluster/: docker-compose.yml  migrate.py  run_offline_tests.sh  run_online_tests.sh
commands/: deploy.mk  dev.mk  docker-build.mk  docker-build.prod.mk  kube.mk  local-prod.mk  prod.mk
consumers/cryptopanic/: cryptopanic.Dockerfile  main.py  requirements.txt
consumers/scraped/: main.py  scraped.Dockerfile
crypto-wss/: main.py  wss.Dockerfile  wss.dockerfile
cryptofeed/cryptofeed/: pipelines.py
db/: initdb.Dockerfile  initdb.py
docker/: docker-compose-ansible.prod.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
docs/: DEV_NOTES.md
env-vars/: .env.ansible.prod.example  .env.dev  .env.dockerhub.example
scrapping-cluster/: .env  docker-compose.yml  makefile  requirements.txt  version.py
scrapy-cluster/: docker-compose.yml
sentiment_analysis/: driver.py  main.py  sa.dockerfile  scraper.py
spark/: spark.Dockerfile  spark.dockerfile
v2/: docker-compose.yml  requirements.txt
v3/: .env  .gitignore  airflow.Dockerfile  docker-compose.yaml  docker-compose.yml  makefile  news_model..json
v3/scraper/: main.py
(+200 files in other folders)
